--- a/pom.xml
+++ b/pom.xml
@@ -46,15 +46,15 @@
         地址是：https://docs.spring.io/spring-boot/docs/2.0.3.RELEASE/reference/htmlsingle/
         redis依赖commons-pool 这个依赖一定要添加
         -->
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-pool2</artifactId>
-        </dependency>
 		<!--<dependency>-->
-			<!--<groupId>org.redisson</groupId>-->
-			<!--<artifactId>redisson</artifactId>-->
-			<!--<version>3.11.0</version>-->
+		<!--<groupId>org.apache.commons</groupId>-->
+		<!--<artifactId>commons-pool2</artifactId>-->
 		<!--</dependency>-->
+		<dependency>
+			<groupId>org.redisson</groupId>
+			<artifactId>redisson</artifactId>
+			<version>3.11.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -74,9 +74,7 @@
             <version>2.7.0</version>
             <scope>compile</scope>
         </dependency>
-
     </dependencies>
-
 
     <build>
 		<plugins>
