--- a/pom.xml
+++ b/pom.xml
@@ -50,11 +50,11 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-pool2</artifactId>
         </dependency>
-		<!--<dependency>-->
-			<!--<groupId>org.redisson</groupId>-->
-			<!--<artifactId>redisson</artifactId>-->
-			<!--<version>3.11.0</version>-->
-		<!--</dependency>-->
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.11.0</version>
+        </dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
