--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,10 +1,11 @@
 spring:
   redis:
-    password: xbz_redis@2019
-    host: 47.110.84.21
+    password:
+    host: 127.0.0.1
     port: 6379
     timeout: 15000
-    database: 15
+    database: 0
+    databaseListen: 1
     # Connection URL, will override host, port and password (user will be ignored), e.g. redis://user:password@example.com:6379
     #url:
     ssl: false
